--- a/bookprograms/makefile
+++ b/bookprograms/makefile
@@ -1,4 +1,4 @@
-eatsyscall: eatsyscall.o
-	ld -o eatsyscall eatsyscall.o
-eatsyscall.o: eatsyscall.asm
-	nasm -f elf -g -F stabs eatsyscall.asm -l eatsyscall.lst
+sandbox: sandbox.o
+	ld -m elf_i386 -o sandbox sandbox.o
+sandbox.o: sandbox.asm
+	nasm -f elf -g -F stabs sandbox.asm -l sandbox.lst
